--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:name=".NewScheduleActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".NewExersizeActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
