--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".ExerciseResultActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".AddExerciseResultActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
