--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".NewExersizeActivity"
+            android:name=".NewExerciseActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
