--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name=".AddExerciseResultActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".ExerciseInfoActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
