--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,10 +29,6 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".NewExerciseActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
             android:name=".ExerciseResultActivity"
             android:label="@string/app_name" >
         </activity>
@@ -42,6 +38,10 @@
         </activity>
         <activity
             android:name=".ExerciseInfoActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".SelectExerciseActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
